# myfans-generate-contracts

./: .gitignore  LICENSE  README.md  generate_av_contract.py  generate_usc_contract.py  pyproject.toml
csv/: AV新法契約書.csv.sample  USC2257契約書.csv.sample
templates/: AV新法契約書.j2  USC2257契約書.j2
