[project]
name = "myfans-generate-contracts"
version = "0.1.0"
description = ""
authors = [
    {name = "denzow",email = "denzow@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
